--- a/configs/TUM_RGBD/tum_rgbd.yaml
+++ b/configs/TUM_RGBD/tum_rgbd.yaml
@@ -1,7 +1,7 @@
 project_name: "Gaussian_SLAM_tumrgbd"
 dataset_name: "tum_rgbd"
 checkpoint_path: null
-use_wandb: False
+use_wandb: True
 frame_limit: -1 # for debugging, set to -1 to disable
 seed: 0
 mapping:
