--- a/configs/scannetpp/scannetpp.yaml
+++ b/configs/scannetpp/scannetpp.yaml
@@ -1,7 +1,7 @@
 project_name: "Gaussian_SLAM_scannetpp"
 dataset_name: "scannetpp"
 checkpoint_path: null
-use_wandb: False
+use_wandb: True
 frame_limit: -1 # set to -1 to disable
 seed: 0
 mapping:
