--- a/configs/TUM_RGBD/tum_rgbd.yaml
+++ b/configs/TUM_RGBD/tum_rgbd.yaml
@@ -1,4 +1,4 @@
-project_name: "Gaussian_SLAM_tumrgbd"
+project_name: "Loop_Gaussian_SLAM_tumrgbd"
 dataset_name: "tum_rgbd"
 checkpoint_path: null
 use_wandb: True
