--- a/configs/TUM_RGBD/tum_rgbd.yaml
+++ b/configs/TUM_RGBD/tum_rgbd.yaml
@@ -40,7 +40,7 @@ pose_graph:
   use_gt_relative_pose: True
   opacity_threshold: 0.9
   rel_err_tolerance: 0.0001
-  ownsample_number: 500
+  downsample_number: 500
   loop_inlier_threshold: 0.25
   center_matching_threshold: 0.02
   optimization_max_iterations: 200
