--- a/configs/TUM_RGBD/tum_rgbd.yaml
+++ b/configs/TUM_RGBD/tum_rgbd.yaml
@@ -41,6 +41,8 @@ pose_graph:
   opacity_threshold: 0.95
   center_matching_threshold: 0.005
   downsample_number: 500
+  odometry_weight: 1.0
+  loop_weight: 0.5
   optimization_max_iterations: 500
   optimization_step_size: 0.005
   rel_err_tolerance: 0.0001
