--- a/configs/ScanNet/scannet.yaml
+++ b/configs/ScanNet/scannet.yaml
@@ -2,6 +2,7 @@ project_name: "Loop_Gaussian_SLAM_scannet"
 dataset_name: "scan_net"
 checkpoint_path: null
 use_wandb: True
+optimize_with_loop_closure: True
 frame_limit: -1 # for debugging, set to -1 to disable
 seed: 0
 mapping:
