--- a/configs/ScanNet/scannet.yaml
+++ b/configs/ScanNet/scannet.yaml
@@ -45,7 +45,8 @@ cam:
 pose_graph:
   gt_relative_pose: False
   opacity_threshold: 0.95
-  center_matching_threshold: 0.005
+  odo_matching_threshold: 0.02
+  loop_matching_threshold: 0.005
   downsample_number: 500
   odometry_weight: 1.0
   loop_weight: 1.0
