--- a/configs/TUM_RGBD/tum_rgbd.yaml
+++ b/configs/TUM_RGBD/tum_rgbd.yaml
@@ -38,6 +38,7 @@ cam:
   depth_scale: 5000.0
 pose_graph:
   gt_relative_pose: False
+  color_factor: 8
   opacity_threshold: 0.95
   odo_matching_threshold: 0.02
   loop_matching_threshold: 0.005
